# Eir

./: .dockerignore  .gitignore  Dockerfile.custom  Dockerfile.gateway  RELEASE_NOTES.md  WIKI_MANUAL.md  _rest_routes.inc.php  eir-chat-inject.conf  package.json
docs/: Apnea_Care_Gap_Analysis.md  Apnea_Care_Operation_Flow.md  Apnea_Data_Migration_Plan.md  Data_Mapping_MegaCare_to_Eir.md  Migration_Safety_Review_and_Archive_Plan.md  PDPA_Consent_Remediation_Plan.md  Sandbox_and_Production_Environment_Plan.md
docs/iso_29110/: SI_01_Implementation_Report.md  SI_04_SIT_Sprint5_Sprint6.md
docs/iso_29110/pm/: PM_01_Project_Plan.md  PM_02_04_Sprint4_Report.md  PM_02_05_Sprint5_Report.md  PM_02_06_Sprint6_Report.md  sprint_prompts.md
gateway/: .env.example  Cargo.toml  README.md  RELEASE_NOTES.md
gateway/docs/iso_29110/pm/: PM_01_Project_Plan.md  PM_02_01_Sprint1_Report.md  PM_02_02_Sprint2_Report.md  PM_02_03_Sprint3_Report.md
gateway/src/: a2a.rs  agent_tools.rs  audit.rs  auth.rs  cache.rs  chat.rs  config.rs  fhir.rs  health.rs  jwks.rs  knowledge.rs  main.rs  mcp_audit.rs  oauth.rs  openapi.rs  patients.rs  proxy.rs  rate_limit.rs  rbac.rs  transform.rs  webhook.rs
gateway/static/: chat-widget.js  chat.html
interface/themes/colors/: style_mega_care.scss
scripts/: deploy.sh  e2e_test.sh
sites/sandbox/: sqlconf.php
sql/migrations/: 000_sandbox_bootstrap.sql  001_migration_log.sql  001_mock_data_for_ui.sql  002_lbf_cpap_prescription.sql  003_lbf_sleep_report.sql
sql/seed/: sandbox_mock_data.sql
src/RestControllers/: CpapSyncRestController.php  McpServerController.php
src/RestControllers/Authorization/: SkipAuthorizationStrategy.php
tests/: test_mcp_integration.py
(+1 files in other folders)
