[package]
name = "eir-gateway"
version = "0.1.0"
edition = "2021"
description = "Rust API Gateway for OpenEMR — part of the Asgard AI Platform"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["full"] }
http = "1"
bytes = "1"

[dev-dependencies]
axum-test = "16"
